[gd_scene load_steps=40 format=3 uid="uid://omqogqket58b"]

[ext_resource type="Script" uid="uid://chhxqxlhucf0r" path="res://scrips/player.gd" id="1_i8vih"]
[ext_resource type="AudioStream" uid="uid://cn7cabxpbyhd1" path="res://Assents/sound/thrust-start.mp3" id="2_knqkl"]
[ext_resource type="Texture2D" uid="uid://crttf30ip8huh" path="res://Assents/Main Ship - Base - Full health.png" id="2_qgqwx"]
[ext_resource type="Texture2D" uid="uid://bscyee6dcecf4" path="res://Assents/Main Ship - Engines - Base Engine.png" id="3_6njrx"]
[ext_resource type="Texture2D" uid="uid://hb4d6frro6ll" path="res://Assents/Free Smoke Fx  Pixel 07.png" id="3_qgqwx"]
[ext_resource type="AudioStream" uid="uid://cnbglndayew0d" path="res://Assents/sound/thrust-loop.mp3" id="3_ul4kv"]
[ext_resource type="AudioStream" uid="uid://bl1oww4n4yknx" path="res://Assents/sound/thrust-end.mp3" id="4_oba5i"]
[ext_resource type="Texture2D" uid="uid://casx084hc4kyt" path="res://Assents/Main Ship - Engines - Supercharged Engine - Spritesheet.png" id="5_cgfde"]
[ext_resource type="AudioStream" uid="uid://bynusjsfc2dq1" path="res://Assents/sound/explosion-36210.mp3" id="5_ul4kv"]
[ext_resource type="Script" uid="uid://nm2b6ao0l2gj" path="res://scrips/sistemadisparo.gd" id="6_xlwfv"]
[ext_resource type="Script" uid="uid://cwbqaus5khqsu" path="res://scrips/poder_sistema.gd" id="7_7v5l4"]
[ext_resource type="AudioStream" uid="uid://wk4igqmogh4a" path="res://Assents/sound/laser-gun-81720.mp3" id="11_oba5i"]
[ext_resource type="AudioStream" uid="uid://cyk0pter42gyd" path="res://Assents/sound/mini-airplane-alarm-72478.mp3" id="13_y717v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8vih"]
size = Vector2(30, 31.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_y717v"]
atlas = ExtResource("3_qgqwx")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwnoe"]
atlas = ExtResource("3_qgqwx")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r84g6"]
atlas = ExtResource("3_qgqwx")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m87nl"]
atlas = ExtResource("3_qgqwx")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eo5y"]
atlas = ExtResource("3_qgqwx")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tf0n"]
atlas = ExtResource("3_qgqwx")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y153w"]
atlas = ExtResource("3_qgqwx")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hcl0"]
atlas = ExtResource("3_qgqwx")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldnir"]
atlas = ExtResource("3_qgqwx")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5uw0"]
atlas = ExtResource("3_qgqwx")
region = Rect2(576, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_el7rh"]
atlas = ExtResource("3_qgqwx")
region = Rect2(640, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwk6x"]
atlas = ExtResource("3_qgqwx")
region = Rect2(704, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4wb5"]
atlas = ExtResource("3_qgqwx")
region = Rect2(768, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k7ue"]
atlas = ExtResource("3_qgqwx")
region = Rect2(832, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c4hf"]
atlas = ExtResource("3_qgqwx")
region = Rect2(896, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6njrx"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y717v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwnoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r84g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m87nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eo5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tf0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y153w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hcl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldnir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5uw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el7rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwk6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4wb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k7ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c4hf")
}],
"loop": false,
"name": &"explosion nave",
"speed": 16.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_oba5i"]
atlas = ExtResource("5_cgfde")
region = Rect2(144, 72, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlwfv"]
atlas = ExtResource("5_cgfde")
region = Rect2(48, 24, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v5l4"]
atlas = ExtResource("5_cgfde")
region = Rect2(96, 24, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b21vg"]
atlas = ExtResource("5_cgfde")
region = Rect2(144, 24, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohiiw"]
atlas = ExtResource("5_cgfde")
region = Rect2(0, 72, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_knqkl"]
atlas = ExtResource("5_cgfde")
region = Rect2(48, 72, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul4kv"]
atlas = ExtResource("5_cgfde")
region = Rect2(96, 72, 48, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgfde"]
atlas = ExtResource("5_cgfde")
region = Rect2(0, 24, 48, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_y717v"]
animations = [{
"frames": [],
"loop": true,
"name": &"defalut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oba5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v5l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b21vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohiiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knqkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul4kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgfde")
}],
"loop": false,
"name": &"propulsor",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_i8vih")
acelera = ExtResource("2_knqkl")
loop = ExtResource("3_ul4kv")
decelera = ExtResource("4_oba5i")
explosionS = ExtResource("5_ul4kv")
metadata/_custom_type_script = "uid://chhxqxlhucf0r"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qgqwx")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
position = Vector2(0, 9)
texture = ExtResource("3_6njrx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.75)
shape = SubResource("RectangleShape2D_i8vih")
one_way_collision_margin = 0.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.499998, 21.5)
scale = Vector2(1.10938, 1.15625)
sprite_frames = SubResource("SpriteFrames_6njrx")
autoplay = "default"
offset = Vector2(0, -16)

[node name="AnimatedSprite2Dw" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
position = Vector2(0.901403, -2.16216)
scale = Vector2(0.807508, 0.893581)
sprite_frames = SubResource("SpriteFrames_y717v")
animation = &"defalut"

[node name="sistemadisparo" type="Node2D" parent="."]
script = ExtResource("6_xlwfv")

[node name="Misislspawn" type="Marker2D" parent="sistemadisparo"]
position = Vector2(0, -13)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="sistemadisparo"]
stream = ExtResource("11_oba5i")

[node name="PoderSistema" type="Node" parent="."]
script = ExtResource("7_7v5l4")

[node name="ReduccionTimer" type="Timer" parent="PoderSistema"]
autostart = true

[node name="CrecimientoTimer" type="Timer" parent="PoderSistema"]
wait_time = 0.1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PoderSistema"]
stream = ExtResource("13_y717v")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="PoderSistema/ReduccionTimer" to="PoderSistema" method="_on_reduccion_timer_timeout"]
[connection signal="timeout" from="PoderSistema/CrecimientoTimer" to="PoderSistema" method="_on_crecimiento_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
